--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html>
     <head>
-        <title>{{title}}</title>
+        <title>Build A Blog</title>
     </head>
 <body>
+    <h1>Build a Blog</h1>
+<nav>
+  <a href="/blog">Main Blog Page</a> |
+  <a href="/newpost">Add a Blog Entry</a> |
+</nav>
 
     {% block content %}
     {% endblock %}
+
 
 </body>
 </html>
