--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -3,6 +3,10 @@
 {% block content %}
 
     <h1>Add a Blog Entry</h1>
+    
+    <h4>{{ error_title }}</h4>
+    <h4>{{ error_body }}</h4>
+
     <form method='post'>
         <label>
             Title for your new blog:
